force-app/main/default/objects/Customer_Survey_Log__c/Customer_Survey_Log__c.object-meta.xml
<CustomObject>
    <label>Customer Survey Log</label>
    <nameField>
        <label>Customer Survey Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Survey Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>