force-app/main/default/objects/Customer_Survey_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Survey Logs</relationshipLabel>
    <relationshipName>Customer_Survey_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>