force-app/main/default/objects/Customer_Survey_Log__c/fields/Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Survey</label>
    <referenceTo>Customer_Survey__c</referenceTo>
    <relationshipLabel>Customer Survey Logs</relationshipLabel>
    <relationshipName>Customer_Survey_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>