force-app/main/default/objects/Customer_Survey_Log__c/fields/Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>Email_Opened__c</fullName>
    <label>Email Opened</label>
    <length>20</length>
    <type>Text</type>
</CustomField>