force-app/main/default/objects/Customer_Survey_Log__c/fields/NPS_Wave__c.field-meta.xml
<CustomField>
    <fullName>NPS_Wave__c</fullName>
    <label>NPS Wave</label>
    <length>5</length>
    <type>Text</type>
</CustomField>