force-app/main/default/objects/Customer_Survey_Log__c/fields/Survey_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Survey_Initiated__c</fullName>
    <label>Survey Initiated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>