force-app/main/default/objects/Customer_Survey_Log__c/fields/Survey_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Received_Date_Time__c</fullName>
    <label>Survey Received Date/Time</label>
    <type>DateTime</type>
</CustomField>